--- a/index.html
+++ b/index.html
@@ -143,11 +143,12 @@
 
         <div class="col-6 col-md-3 prod-list-col">
           <div class="card">    
+            <a href="prod-detail.html">
             <picture>
               <source media="(max-width:992px)" srcset="imgs/img1@2x.png">
               <img class="card-img-top img-fluid" alt="Card image cap" src="imgs/img1.png">
             </picture>
-
+              </a>
             <hr class="card-line w-100">
             <div class="card-info">
               <div class="card-marca">BUHO BCN</div>
@@ -159,10 +160,12 @@
 
         <div class="col-6 col-md-3 prod-list-col">
           <div class="card">
+            <a href="prod-detail.html">
             <picture>
               <source media="(max-width:992px)" srcset="imgs/img2@2x.png">
               <img class="card-img-top img-fluid" alt="Card image cap" src="imgs/img2.png">
             </picture>
+            </a>
 
             <div class="prod-list-top-tags">
               <div class="prod-tag tag-discount t-novo">Novo</div>
@@ -178,11 +181,13 @@
         </div>
 
         <div class="col-6 col-md-3 prod-list-col">
-          <div class="card">    
+          <div class="card"> 
+            <a href="prod-detail.html">
             <picture>
               <source media="(max-width:992px)" srcset="imgs/img3@2x.png">
               <img class="card-img-top img-fluid" alt="Card image cap" src="imgs/img3.png">
             </picture>
+            </a>
 
             <hr class="card-line w-100">
             <div class="card-info">
@@ -195,11 +200,12 @@
 
         <div class="col-6 col-md-3 prod-list-col">
           <div class="card">
+            <a href="prod-detail.html">
             <picture>
               <source media="(max-width:992px)" srcset="imgs/img4@2x.png">
               <img class="card-img-top img-fluid" alt="Card image cap" src="imgs/img4.png">
             </picture>
-
+            </a>
             <hr class="card-line w-100">
             <div class="card-info">
               <div class="card-marca">BUHO BCN</div>
@@ -210,11 +216,13 @@
         </div>
 
         <div class="col-6 col-md-3 prod-list-col">
-          <div class="card">    
+          <div class="card">
+            <a href="prod-detail.html">
             <picture>
               <source media="(max-width:992px)" srcset="imgs/img5@2x.png">
               <img class="card-img-top img-fluid" alt="Card image cap" src="imgs/img5.png">
             </picture>
+            </a>
 
             <hr class="card-line w-100">
             <div class="card-info">
@@ -227,10 +235,12 @@
 
         <div class="col-6 col-md-3 prod-list-col">
           <div class="card">
+            <a href="prod-detail.html">
             <picture>
               <source media="(max-width:992px)" srcset="imgs/img6@2x.png">
               <img class="card-img-top img-fluid" alt="Card image cap" src="imgs/img6.png">
             </picture>
+            </a>
 
             <hr class="card-line w-100">
             <div class="card-info">
@@ -242,11 +252,13 @@
         </div>
 
         <div class="col-6 col-md-3 prod-list-col">
-          <div class="card">    
+          <div class="card">
+            <a href="prod-detail.html">
             <picture>
               <source media="(max-width:992px)" srcset="imgs/img7@2x.png">
               <img class="card-img-top img-fluid" alt="Card image cap" src="imgs/img7.png">
             </picture>
+            </a>
 
             <div class="prod-list-top-tags">
               <div class="prod-tag tag-discount t-promo">Promo</div>
@@ -263,10 +275,12 @@
 
         <div class="col-6 col-md-3 prod-list-col">
           <div class="card">
+            <a href="prod-detail.html">
             <picture>
               <source media="(max-width:992px)" srcset="imgs/img8@2x.png">
               <img class="card-img-top img-fluid" alt="Card image cap" src="imgs/img8.png">
             </picture>
+            </a>
 
             <hr class="card-line w-100">
             <div class="card-info">
